[gd_scene load_steps=2 format=2]

[ext_resource path="res://module/Screenshake.gd" type="Script" id=1]

[node name="Screenshake" type="Node"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[node name="FrequencyTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="FrequencyTimer" to="." method="_on_FrequencyTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
